src/test/contracts/negative/deep_pattern_matching/pm_fail7.religo
type foo = A(unit) | B(unit)

let t = (x: foo) =>
  switch(x) {
  | A => "hey"
  | B => 2
  }